k8s/back_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatapp
      tier: back
  template:
    metadata:
      labels:
        app: chatapp
        tier: back
    spec:
      containers:
      - name: chat-backend
        image: mdskun/chatapp2_backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/health/
            port: 8000
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/health/
            port: 8000
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 3
