k8s/front_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatapp
      tier: front
  template:
    metadata:
      labels:
        app: chatapp
        tier: front
    spec:
      containers:
      - name: chat-frontend
        image: mdskun/chatapp2_frontend:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
