k8s/back_service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-svc
  namespace: chatapp
spec:
  type: ClusterIP       # backend doesn't need to be exposed externally; frontend talks to it internally
  selector:
    app: chatapp
    tier: back
  ports:
    - port: 8000
      targetPort: 8000
