k8s/front_service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend-svc
  namespace: chatapp
spec:
  type: NodePort
  selector:
    app: chatapp
    tier: front
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30088
